# mergers

./: .gitignore  Cargo.toml  Makefile  README.md  TESTING.md  com.github.joske.mergers.json
.github/workflows/: audit.yml  bench.yml  build-macos.yml  build-windows.yml  ci.yml  homebrew.yml  publish.yml  test-windows-arm.yml  test-windows.yml  ui-tests.yml
assets/: com.github.joske.mergers.desktop  com.github.joske.mergers.metainfo.xml  merde.desktop  mergers.desktop
benches/: benchmarks.rs
docs/plans/: 2026-03-03-automated-ui-testing-design.md  2026-03-03-automated-ui-testing-plan.md  2026-03-08-pane-switch-pull-delete-fullscreen-design.md  2026-03-08-pane-switch-pull-delete-fullscreen-plan.md
src/: diff.rs  lib.rs  main.rs  myers.rs  patch.rs  settings.rs  ui.rs  vcs.rs
src/ui/: common.rs  diff_state.rs  diff_view.rs  dir_window.rs  file_window.rs  merge_state.rs  merge_view.rs  mod.rs  patch_window.rs  preferences.rs  vcs_window.rs  welcome.rs
src/ui/common/: chunk_map.rs  editor.rs  file_watcher.rs  find_bar.rs  gutter.rs  helpers.rs  mod.rs  navigation.rs  scroll_sync.rs  search.rs  tabs.rs  tests.rs  toolbar.rs
tests/: cli_integration.rs  vcs_integration.rs
tests/fixtures/: dirs.patch  left_to_right.patch
tests/ui_integration/: conftest.py  requirements.txt  test_cli.py  test_dir_compare.py  test_dir_unique.py  test_file_diff.py  test_file_diff_advanced.py  test_file_diff_unique.py  test_merge_save.py  test_merge_view.py  test_patch.py  test_patch_multi.py  test_patch_single.py  test_save_and_edit.py  test_shortcuts.py  test_vcs.py  test_vcs_advanced.py  test_window_title.py  test_wrap_navigation.py
