[package]
name = "meld-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5"
dircmp = "0"
gtk4 = { version = "0.11", features = ["v4_14"] }
gio = { version = "0.22", features = ["v2_66"] }
chrono = "0.4"
notify = "8"
clap = { version = "4", features = ["derive"] }
sourceview5 = { version = "0.11.0", features = ["gtk_v4_14"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
