[package]
name = "mergers"
version = "0.4.4"
edition = "2024"
description = "A visual diff and merge tool for files and directories"
license = "GPL-2.0"

[dependencies]
walkdir = "2.5"
dircmp = "0.2"
gtk4 = { version = "0.11", features = ["v4_14"] }
gio = { version = "0.22", features = ["v2_66"] }
chrono = "0.4"
notify = "8.2"
clap = { version = "4.5", features = ["derive"] }
sourceview5 = { version = "0.11", features = ["gtk_v4_14"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
