[package]
name = "mergers"
version = "0.8.3"
edition = "2024"
description = "A visual diff and merge tool for files and directories"
license = "GPL-2.0"

[[bench]]
harness = false
name = "benchmarks"

[dependencies]
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
ctrlc = { version = "3.5", features = ["termination"] }
dircmp = "0.2"
gio = { version = "0.22", features = ["v2_66"] }
gtk4 = { version = "0.11", features = ["v4_14"] }
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
sourceview5 = { version = "0.11", features = ["gtk_v4_14"] }
tempfile = "3.27"
toml = "1.0"
walkdir = "2.5"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.10"
tempfile = "3.27"
